--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "Servidor de teste para atividade de upload múltiplo (Express + Multer)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "backend": "node server.js",
+    "frontend": "npx http-server -p 5500",
+    "dev": "echo Use 'npm run backend' and 'npm run frontend' in separate terminals or run start-all.ps1",
+    "all": "concurrently \"npm:backend\" \"npm:frontend\" --names Backend,Frontend --prefix name"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "form-data": "^4.0.4",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "form-data": "^4.0.4",
+    "concurrently": "^7.6.0"
   }
 }
