--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "bcryptjs": "^2.4.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "form-data": "^4.0.4",
