--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.4",
-    "bcryptjs": "^2.4.3",
-    "uuid": "^9.0.0"
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "form-data": "^4.0.4",
